--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,14 @@
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcpkix-jdk15on</artifactId>
      <version>1.57</version>
-  </dependency>    
+     <exclusions>
+     	<exclusion>
+     		<groupId>org.bouncycastle</groupId>
+     		<artifactId>bcprov-jdk15on</artifactId>
+     	</exclusion>
+     </exclusions>
+   </dependency>    
+
+  
  </dependencies>
 </project>
