--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,52 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.cert.test</groupId>
-  <artifactId>certiparsetest</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk15on -->
-  <dependencies>
-   <dependency>
-     <groupId>org.bouncycastle</groupId>
-     <artifactId>bcpkix-jdk15on</artifactId>
-     <version>1.57</version>
-     <exclusions>
-     	<exclusion>
-     		<groupId>org.bouncycastle</groupId>
-     		<artifactId>bcprov-jdk15on</artifactId>
-     	</exclusion>
-     </exclusions>
-   </dependency>    
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.cert.parse.test</groupId>
+	<artifactId>certificatetest</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>certificatetest Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
 
-  
- </dependencies>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/jsp-api -->
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/taglibs/standard -->
+
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-core -->
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-core</artifactId>
+			<version>2.5.5</version>
+		</dependency>
+
+
+	</dependencies>
+	<build>
+		<finalName>certificatetest</finalName>
+	</build>
 </project>
